services/github-broker/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-broker
  labels:
    app.kubernetes.io/name: github-broker
    app.kubernetes.io/component: provider-adapter
    app.kubernetes.io/part-of: agentos
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: github-broker
  ports:
    - name: http
      protocol: TCP
      port: 8789
      targetPort: http
